# src/routes/index.ts
@@ -4,6 +4,7 @@ import categoryRouter from "./category.route";
 import userRouter from "./user.route";
 import orderRouter from "./order.route";
 import cartRouter from "./cart.route";
+import bucketRouter from "./bucket.route";
 
 const router = Router();
 
@@ -12,5 +13,6 @@ router.use('/api/category', categoryRouter);
 router.use('/api/user', userRouter);
 router.use('/api/order', orderRouter);
 router.use('/api/cart', cartRouter);
+router.use('/api/bucket', bucketRouter);
 
 export default router;
